--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 body {
@@ -40,4 +40,4 @@ body {
 }
 button.btn.btn-primary{
   background-color: black;
-}
+} */
