--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,27 @@
-/* .App {
+.App {
   text-align: center;
+  
 }
-body {
+
+.unauthorized {
+  text-align: center;
+  margin: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: oblique;
+  font-size: large;
+}
+
+.signin {
+  text-align: center;
+  margin: 40px;
+}
+
+form {
+  display: block;
+  margin: 50px;
+
+}
+/* body {
   background-color: rgba(0, 0, 0, 0.146);
 }
 .App-logo {
