--- a/src/Components/UserComponents/Cards.css
+++ b/src/Components/UserComponents/Cards.css
@@ -24,13 +24,13 @@
     background-color: rgb(147, 0, 0);
 }
 
-
 /* Add and Modal Buttons */
 .btn.btn-success{
-    background-color: rgb(46, 46, 189);
+    background-color: rgba(71, 193, 30, 0.625);
 }
 .btn.btn-success:hover{
-    background-color: rgb(0, 198, 184);
+    background-color: rgb(65, 223, 12);
+    filter: saturate(200%);
 }
 
 
@@ -63,5 +63,12 @@
 
 .user-cards{
     position: relative;
-    top: 60px;
+    top: 70px;
+}
+
+.spotify-button{
+    width:33%;
+}
+.spotify-button:hover{
+    filter:saturate(300%)
 }
