--- a/src/Components/UserComponents/Cards.css
+++ b/src/Components/UserComponents/Cards.css
@@ -1,42 +1,6 @@
-
 .card-body{
    align-items: center;
 }
-/* Podcast Name */
-.card-title{
-    text-align: left;
-}   
-
-/* Details button */
-.btn.btn-primary{
-    background-color: black;
-} 
-.btn.btn-primary:hover{
-    background-color: rgb(0, 97, 138);
-} 
-
-/* Remove button */
-.btn.btn-danger{
-    background-color: black;
-    border-color: rgb(255, 255, 255);
-}
-.btn.btn-danger:hover{
-    background-color: rgb(147, 0, 0);
-}
-
-/* Add and Modal Buttons */
-.btn.btn-success{
-    background-color: rgba(71, 193, 30, 0.625);
-}
-.btn.btn-success:hover{
-    background-color: rgb(65, 223, 12);
-    filter: saturate(200%);
-}
-
-
-
-/* *********** */
-/* card as just the image */
 
 .cards{
     display: inline-block;
@@ -48,8 +12,8 @@
         display: block;
         width: 100%;
     }
-}
 
+}
 .card{
    margin: 10px;
    border: black 5px solid;
@@ -64,6 +28,14 @@
 .user-cards{
     position: relative;
     top: 70px;
+}
+/* Add Buttons */
+.btn.btn-success{
+    background-color: rgba(71, 193, 30, 0.625);
+}
+.btn.btn-success:hover{
+    background-color: rgb(65, 223, 12);
+    filter: saturate(200%);
 }
 
 .spotify-button{
