--- a/src/Components/PodcastComponents/SpotifySearch.css
+++ b/src/Components/PodcastComponents/SpotifySearch.css
@@ -30,3 +30,28 @@
     box-shadow: rgba(0, 0, 0, 0.379) 0px 2px 10px;
     border-radius: 25px;
 }
+
+.random{
+    margin-bottom: 15px;
+    text-align: center;
+    text-shadow: 1px 1px 4px grey;
+}
+
+.search-results{
+    margin: 10px;
+    text-align: center;
+    text-shadow: 1px 1px 4px grey;
+}
+
+.search-background{
+    background-color: black;
+    height: 50px;
+    padding: 0px;
+}
+
+.favorites-podcasts{
+    position: relative;
+    top: 100px;
+    margin-bottom: 50px;
+
+}
