--- a/src/Components/PodcastComponents/SpotifySearch.css
+++ b/src/Components/PodcastComponents/SpotifySearch.css
@@ -14,7 +14,7 @@
     width: auto;
     height: auto;
     border: black solid .1rem;
-    border-radius: 25px;
+    border-radius: 5px;
     box-shadow: rgb(0, 0, 0) 0px 2px 10px;
 }
 
@@ -28,7 +28,8 @@
 
 .search-input {
     box-shadow: rgba(0, 0, 0, 0.379) 0px 2px 10px;
-    border-radius: 25px;
+    border-radius: 5px;
+    width: 250px;
 }
 
 .random{
@@ -45,7 +46,7 @@
 
 .search-background{
     background-color: black;
-    height: 50px;
+    height: 35px;
     padding: 0px;
 }
 
